fix full window button::before on iOS

--- a/src/styles/5. layout/transport.settings.pcss
+++ b/src/styles/5. layout/transport.settings.pcss
@@ -3,13 +3,14 @@
   flex-wrap: wrap;
   flex-direction: row;
   flex: 2;
+  position: relative;
 
   @media screen and (orientation: landscape) {
     flex: 1.2;
     flex-wrap: unset;
   }
 
-  & .c-button {
+  & > .c-button {
     flex: 1 1 auto;
     flex-direction: row;
     height: auto;
