--- a/src/styles/6. components/c-button.pcss
+++ b/src/styles/6. components/c-button.pcss
@@ -5,15 +5,16 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  width: 100%;
-  height: 100%;
-
+  
   & button {
     cursor: pointer;
   }
-
+  
   &.-base {
     background-color: transparent;
+    width: 100%;
+    height: 100%;
+    position: relative;
   }
 
   & .o-icon {
